just added the dates as number on the daily page and aligned the events correctly

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -43,7 +43,6 @@
 }
 
 .daily-view-button:hover {
-  background-color: #51575c;
   transition-delay: 0.1s;
 }
 
